examples/neg/namer/types/multiple-effect-sets.effekt
def qux[A, B] { f: A => B / raise / log }: B = <>
